--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,5 @@
 @import 'components/header';
 @import 'components/import-resume';
 @import 'components/resume-builder';
-@import 'components/resume-template'; 
+@import 'components/resume-template';
+@import 'components/job-listing'; 
