--- a/src/styles/iframe-styles.scss
+++ b/src/styles/iframe-styles.scss
@@ -22,4 +22,28 @@ iframe[name="editor-canvas"] {
 	// the scrollbar is always visible on the right side
 	position: absolute;
 	right: 0;
+}
+
+// Add specific styling for job listings in the editor
+.job-listing__company-row {
+  .block-editor-block-list__layout {
+    display: flex !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    width: 100% !important;
+    
+    > .wp-block {
+      margin: 0 !important;
+      
+      &:first-child {
+        margin-right: 10px !important;
+        flex: 1 !important;
+      }
+      
+      &:last-child {
+        text-align: right !important;
+        min-width: 150px !important;
+      }
+    }
+  }
 } 
