Use Open Sans font

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -32,7 +32,7 @@
   }
 
   &__brand {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 500;
     font-size: 18px;
     color: #ffffff;
@@ -85,7 +85,7 @@
     padding: 10px 15px;
     font-size: 14px;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -105,7 +105,7 @@
     padding: 8px 15px;
     font-size: 14px;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -125,7 +125,7 @@
     padding: 8px 15px;
     font-size: 14px;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     cursor: pointer;
     display: flex;
     align-items: center;
