--- a/src/styles/components/_hamburger-menu.scss
+++ b/src/styles/components/_hamburger-menu.scss
@@ -68,7 +68,7 @@
     cursor: pointer;
     font-size: 14px;
     font-weight: 600;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     align-items: center;
     border-radius: 4px;
