--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,5 +1,5 @@
 /* Import Open Sans font from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Inter:wght@400;500;700&family=Roboto:wght@400;500;700&family=Lato:wght@400;700&family=Montserrat:wght@400;500;700&family=Lato:wght@400;700&family=Montserrat:wght@400;500;700&display=swap');
 
 /* Define font variables for use throughout the app */
 :root {
